# social_media_backend

./: pyproject.toml
core/: models.py  urls.py  views.py
core/migrations/: 0001_initial.py  0002_post.py  0003_likepost.py
social_media_backend/: asgi.py  settings.py  urls.py  wsgi.py
templates/: index.html  profile.html  setting.html  signin.html  signup.html
