[tool.poetry]
name = "social_media"
version = "0.1.0"
description = ""
authors = ["Julie Park <juliepark242@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mypy = "^0.971"
autopep8 = "^1.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
